--- a/README
+++ b/README
@@ -1,16 +1,10 @@
-Plex-2.8 version 0.01
-=====================
+Plex version RC2
+=================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+Plex is a small, fast, and scalable application framework,
+with its own high performance webserver.
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+This is the second release candidate of Plex.
 
 INSTALLATION
 
@@ -25,13 +19,19 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-HTTP::Response
-HTTP::Date
-HTTP::Status
-Proc::Daemon
+  HTTP::HeaderParser::XS
+  Moose
+  MooseX::Types
+  CSS::Minifier::XS
+  JavaScript::Minifier::XS
+  File::MMagic
+  Path::Abstract
 
 COPYRIGHT AND LICENCE
 
-This program is free software; you can redistribute it and/or modify it under the same terms as Perl itself.
+Copyright (C) 2010 by Daniel Zulla
 
-Copyright (C) 2009 by Daniel Zulla
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself, either Perl version 5.12.0 or,
+at your option, any later version of Perl 5 you may have available.
+
